Fix double borders on code blocks

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -1,5 +1,5 @@
 
-.highlight {
+pre.highlight {
   outline: 1px solid #ccc;
   background-color: #efefef;
   padding: 7px 7px 7px 10px;
